--- a/css/shader.css
+++ b/css/shader.css
@@ -16,6 +16,21 @@ body {
   background-size: cover;
 }
 
+/* font size */
+h1 {
+  font-size: 2em;
+}
+h2 {
+  font-size: 1.8em;
+}
+h3 {
+  font-size: 1.6em;
+}
+p {
+  font-size: 1.2em;
+}
+
+
 .background-container {
   position: fixed;
   left: 0;
@@ -46,11 +61,18 @@ header {
   z-index: 1;
 }
 header p {
-  text-align: left;
   padding-left: 1em;
+  /* width: 45%; */
 }
 #logo {
   font-family: 'Karla', sans-serif;
+  float: left;
+  text-align: left;
+}
+#email {
+  float: right;
+  text-align: right;
+  padding-right: 1em;
 }
 footer {
   background: rgba(0, 0, 0, 0.5);
@@ -60,6 +82,5 @@ footer {
   bottom: 0;
 }
 footer p{
-  font-size: 0.7em;
-
+  font-size: 0.9em;
 }
